--- a/src/components/Register/register.module.css
+++ b/src/components/Register/register.module.css
@@ -6,5 +6,27 @@
 }
 .topBlank{
     width: 350px;
-    height: 40px;
+    height: 25px;
+}
+.contentBox{
+   box-sizing: border-box;
+   padding : 44px;
+   border: 1px solid black
+}
+.imageMargin{
+    width: 180px;
+    display: block;
+    margin: auto;
+}
+.signupText{
+    margin-top: 18px;
+    margin-bottom: 14px;
+    text-align: center;
+}
+
+.link{
+    color : #8e8e8e;
+    font-weight: bold;
+    text-decoration: none;
+
 }
