input global component completed

--- a/src/components/Global/Styles/input.module.css
+++ b/src/components/Global/Styles/input.module.css
@@ -2,6 +2,7 @@
    border: none; 
    width: 95%;
    box-shadow: none;
+   background-color: #fafafa;
    
 }
 *:focus {
@@ -10,8 +11,9 @@
 
 .border{
    width: 260px;
+   background-color: #fafafa;
    box-sizing: border-box;
-   border:  1px solid #ababab;
+   border:  1px solid #e0e0e0;
    padding: 5px;
    border-radius: 2px;
 }
