--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+ background-color: #fafafa;
 }
 
 .App-logo {
