--- a/src/components/Register/register.module.css
+++ b/src/components/Register/register.module.css
@@ -1,5 +1,4 @@
 .register{
-    height: 100vh;
     width: 350px;
     margin: auto;
     margin-top : 30
@@ -11,7 +10,8 @@
 .form{
    box-sizing: border-box;
    padding : 42px;
-   border: 1px solid black;
+   border: 1px solid #e0e0e0;
+   background-color : #fff;
    text-align: center;
 }
 .imageMargin{
@@ -21,14 +21,47 @@
 }
 .signupText{
     margin-top: 18px;
-    margin-bottom: 14px;
+    margin-bottom: 40px;
     text-align: center;
+   color : #8e8e8e;
+   font-weight: bolder;
 }
 
 .link{
     color : #8e8e8e;
-    font-weight: bold;
+    font-weight: bolder;
     text-decoration: none;
 
 
+}
+.inputForm{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.formFooter{
+    margin-top: 20px;
+    color: #8e8e8e;
+    font-weight: bold;
+    font-size: 11px;
+    margin-bottom: 35px;
+}
+.formPrivacy{
+  margin-top: 15px;
+}
+.account{
+    font-size: small;
+ background-color : #fff;
+ margin-top: 10px;
+ display: flex;
+ height: 70px;
+ justify-content: center;
+ align-items: center;
+ border: 1px solid #e0e0e0;
+}
+
+.loginLink{
+    margin-left: 4px;
+    color :#0095F6 ;
+    text-decoration: none; 
 }
