--- a/src/components/Global/Styles/button.module.css
+++ b/src/components/Global/Styles/button.module.css
@@ -1,11 +1,12 @@
 .btn{
  width: 260px;
- padding: 5px 9px;
+ padding: 10px 9px;
  border: none;
  border-radius: 4px;
  background-color: #0095F6;
  color: white;
  font-weight: bold;
  cursor: pointer;
+ margin-top: 20px;
 }
 
